# soups-on

./: .gitignore  CMakeLists.txt
assets/: README.md  levels.txt  manifest.txt  soups-on.tiled-project
assets/fonts/: m5x7.ttf.attrib
assets/maps/: map_001._items.csv  map_001._map.csv  map_001.tmx  map_001_background.csv  map_001_backgroundDecor.csv  map_001_foreground.csv  map_001_items.csv  map_001_map.csv  map_002._items.csv  map_002._map.csv  map_002.tmx  map_002_items.csv  map_002_map.csv  map_003.csv  map_003.tmx  map_003_items.csv  map_003_map.csv  map_004.tmx  map_004_decor.csv  map_004_mapBackground.csv  map_004_mapForeground.csv  template.tmx
assets/oldSprites/: SO-BKGTILESET.tsx  textures_background_debug.tsx  textures_collision_debug.tsx
assets/sprites/: SO-BKGTILESET.tsx  debug.aseprite  debug.tsx  level_debug.aseprite  level_debug.tsx  player_debug.aseprite  textures_background_debug.aseprite  textures_collision_debug.aseprite  textures_foreground_debug.aseprite  textures_foreground_debug.tsx
include/: Action.h  ActionManager.h  Animation.h  AssetManager.h  Background.h  Component.h  Entity.h  EntityManager.h  Game.h  Map.h  Scene.h  SceneLevel.h  SceneMenu.h  Vec2.h
src/: Action.cpp  ActionManager.cpp  Animation.cpp  AssetManager.cpp  Background.cpp  Entity.cpp  EntityManager.cpp  Game.cpp  Map.cpp  Scene.cpp  SceneLevel.cpp  SceneMenu.cpp  Vec2.cpp  main.cpp
